@@ -23,7 +23,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLConnection;
 import java.net.URLDecoder;
 
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 /**
  * 
@@ -55,7 +55,7 @@ public class URLConnectionRequest {
 	 * @throws IOException
 	 */
     public static URLConnection getAuthorizedConnection(URLConnection uc, String userInfo, String authorizationType) {
-        // check authorization
+        // check authorization 
         if (userInfo != null) {
         	// FIXME does not work for SOCKS proxies
             uc.setRequestProperty(authorizationType, URL_CONNECTION_BASIC + encode(decodeString(userInfo)));
@@ -68,9 +68,15 @@ public class URLConnectionRequest {
      * @param source
      * @return
      */
-    private static String encode(String source){
-    	BASE64Encoder enc = new sun.misc.BASE64Encoder();
-    	return enc.encode(source.getBytes());
+    static String encode(String source) {
+    	// CL-2434: the method pads the result with equal signs '=' correctly
+    	// Base64.encodeBase64URLSafeString() does not pad the result with '=', which was causing the authentication to fail
+    	
+    	// commons-codec-1.4 uses multiline chunking in Base64.encodeBase64String(), 
+    	// therefore Base64.encodeBase64String() has been replaced with the following: 
+    	return org.apache.commons.codec.binary.StringUtils.newStringUtf8(Base64.encodeBase64(source.getBytes(), false));  
+    	// FIXME Since commons-codec-1.5 the code can be replaced with:
+    	// return Base64.encodeBase64String(source.getBytes());
     }
     
 	/**
@@ -78,7 +84,7 @@ public class URLConnectionRequest {
 	 * @param s
 	 * @return
 	 */
-	private static final String decodeString(String s) {
+	static final String decodeString(String s) {
 		try {
 			return URLDecoder.decode(s, ENCODING);
 		} catch (UnsupportedEncodingException e) {
